--- a/package.json
+++ b/package.json
@@ -2,15 +2,33 @@
   "name": "github-branch-deployment-action",
   "version": "1.0.0",
   "description": "This is a GitHub action that will deploy a folder to a GitHub branch",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "dev": "node ./src/index.js"
+    "build": "tsc",
+    "format": "prettier --write **/*.ts",
+    "format-check": "prettier --check **/*.ts",
+    "dev": "node ./dist/index.js",
+    "lint": "eslint src/**/*.ts",
+    "package": "ncc build --source-map",
+    "publish": "npm run format && npm run build && npm run package"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@actions/core": "^1.5.0",
-    "@actions/github": "^5.0.0"
+    "@actions/github": "^5.0.0",
+    "fast-glob": "^3.2.7",
+    "git-url-parse": "^11.6.0",
+    "isomorphic-git": "^1.10.0",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@types/node": "^16.9.1",
+    "@typescript-eslint/parser": "^4.13.1",
+    "@vercel/ncc": "^0.31.1",
+    "eslint": "^7.32.0",
+    "prettier": "2.2.1",
+    "typescript": "^4.1.3"
   }
 }
