fix: Making some changes to the code

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Test
         run: npm run test
 
-      - name: Build
-        run: npm run build
+      - name: Publish
+        run: npm run publish
 
       - name: Push
         uses: ./
